--- a/Note/templates/base.html
+++ b/Note/templates/base.html
@@ -44,7 +44,7 @@
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <div class="footer-container">
+        <div class="footer-container" align="bottom">
             <footer class="wrapper">
                 <h3 align="right">NOTE BY SUHAS</h3>
             </footer>
