--- a/Note/templates/index.html
+++ b/Note/templates/index.html
@@ -6,8 +6,10 @@
 
 {% block content %}
 <article>
-                    <h1 align="center"> WELCOME</h1>
-                </article>
+    <h1 align="center"> Welcome</h1>
+        <p align="center"> A great distributed way to save your notes with maximum security.
+            Open anywhere, anytime. Deploy it in your intranet for internal note sharing. </p>
+</article>
 {% endblock %}
 
 {% block aside %}
