--- a/Note/templates/signup.html
+++ b/Note/templates/signup.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% macro render_field(field) %}
+<tr {% if field.error %} class = "error" {% endif %}>
+    <td> {{field.label}} </td>
+    <td> {{field(**kwargs) | safe }}</td>
+</tr>
+<tr class="error">
+    <td></td>
+    <td>
+        <ul>
+            {% for error in field.errors %}
+            <li> {{ error }} </li>
+            {% endfor %}
+        </ul>
+    </td>
+</tr>
+{% endmacro %}
 
-</body>
-</html>
+{% block title %}
+<title>Home | Sign up</title>
+{% endblock %}
+
+{% block content %}
+<article>
+    <h1 style="clear:both">  Please fill the details to Sign up.</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <table>
+            {{ render_field(form.username, size = 50) }}
+            {{ render_field(form.password, size = 50) }}
+            {{ render_field(form.password2, size = 50) }}
+            {{ render_field(form.email, size = 50) }}
+            <tr class="submit">
+                <td></td>
+                <td><button type="submit">Sign up</td>
+            </tr>
+        </table>
+    </form>
+</article>
+{% endblock %}
+
+{% block aside %}
+<p> You can use Note after registration.</p>
+{% endblock %}
