--- a/Note/static/css/normalize.css
+++ b/Note/static/css/normalize.css
@@ -162,7 +162,7 @@ sub,
 sup {
   font-size: 75%;
   line-height: 0;
-  position: relative;
+  position: absolute;
   vertical-align: baseline;
 }
 
