--- a/Note/templates/home.html
+++ b/Note/templates/home.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+
+{% block title %}
+<title>Home | Home</title>
+{% endblock %}
+
+{% block content %}
+<article>
+    <header>
+        <h1>My Notes</h1>
+        <ul>
+        <section>
+        {% for note in notes %}
+            <li> <a href = "{{ url_for('view',id = note.id) }}">{{ note.title }}"</a> </li>
+        {% endfor %}
+        </section>
+        </ul>
+    </header>
+</article>
+{% endblock %}
+
