--- a/Note/templates/new.html
+++ b/Note/templates/new.html
@@ -43,7 +43,7 @@
 {% block aside %}
 <section>
 {% for note in notes %}
-    <p> <a href = "{{ url_for('view',id = note.id) }}">{{ note.title }}"</a> </p>
+    <p> <a href = "{{ url_for('view',id = note.id) }}">{{ note.title }}</a> </p>
 {% endfor %}
 </section>
 {% endblock %}
