--- a/Note/templates/home.html
+++ b/Note/templates/home.html
@@ -12,7 +12,7 @@
         <ul>
         <section>
         {% for note in notes %}
-            <li> <a href = "{{ url_for('view',id = note.id) }}">{{ note.title }}"</a> </li>
+            <li> <a href = "{{ url_for('view',id = note.id) }}">{{ note.title }}</a> </li>
         {% endfor %}
         </section>
         </ul>
